# python_template

./: .gitignore  LICENSE  README.md  book.toml  notes.md  pyproject.toml
.github/workflows/: api_docs.yml.stash  ci.yml  ci.yml.stash  deployment.yml.stash  linting.yml  release.yml.stash  testing.yml  userguide.yml.stash  version.yml.stash
coverage_reports/: coverage.xml
coverage_reports/dev/: coverage.xml
coverage_reports/dev/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2e1acac0bc9aa5e3___init___py.html  z_2e1acac0bc9aa5e3_sum_py.html
coverage_reports/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2e1acac0bc9aa5e3___init___py.html  z_2e1acac0bc9aa5e3_sum_py.html
coverage_reports/main/: coverage.xml
coverage_reports/main/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2e1acac0bc9aa5e3___init___py.html  z_2e1acac0bc9aa5e3_sum_py.html
docs/api/: index.html  python_template.html  search.js
docs/api/python_template/: sum.html
docs/userguide/: .gitignore  book.toml
docs/userguide/book/: 404.html  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
src/python_template/: __all__.py  sum.py
